--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+
+    <link rel="stylesheet" href="/styles/flowershop.css">
+
 </head>
+
 <body>
-    
+    <div class="container-one">
+        <div>
+            <h1>Let's make beautiful flowers a part of your life.</h1>
+            <h6 class="paragraph">It is a long established fact that a reader will be distracted by the readable content
+                of a page when
+                looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
+                of letters.</h6>
+            <input class="btn" placeholder="Shop Now" type="text" name="" id="">
+        </div>
+
+        <div>
+
+            <img src="Flower Asset/pngwing 10.png" alt="">
+
+        </div>
+
+        
+
+
+
+
+
+
+
+        <header>
+
+        </header>
+        <main>
+
+        </main>
+        <footer>
+
+        </footer>
+
 </body>
+
 </html>
