added the CONTAINER PART TWO START

--- a/index.html
+++ b/index.html
@@ -11,40 +11,51 @@
 </head>
 
 <body>
+    <!-- CONTAINER PART ONE START -->
     <div class="container-one">
-        <div>
+        <div class="con-part-one">
             <h1>Let's make beautiful flowers a part of your life.</h1>
             <h6 class="paragraph">It is a long established fact that a reader will be distracted by the readable content
                 of a page when
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
                 of letters.</h6>
-            <input class="btn" placeholder="Shop Now" type="text" name="" id="">
+            <button class="btn">Shop Now</button>
+          
         </div>
-
-        <div>
+        <div id="cone-img">
 
             <img src="Flower Asset/pngwing 10.png" alt="">
 
         </div>
-
-        
-
-
+    </div>
+    <!-- CONTAINER PART ONE END -->
 
 
 
 
 
-        <header>
+    <!-- CONTAINER PART TWO START -->
+    <div class="conaitner-two">
+        <div>
+            <h3>Our Featured Flowers</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        </div>
+        <div class="cart-image">
+            <div class="cart-one">
+                <img src="Flower Asset\pngwing 6.png" alt="">
+            </div>
+            <div class="cart-two">
+                <img src="Flower Asset\pngwing 6.png" alt="">
+            </div>
+            <div class="cart-three">
+                <img src="Flower Asset\pngwing 6.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- CONTAINER PART TWO END -->
 
-        </header>
-        <main>
 
-        </main>
-        <footer>
-
-        </footer>
-
+   
 </body>
 
 </html>
