added the CONTAINER ONE to CONTAINER SEVEN END

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
                 of letters.</h6>
             <button class="btn">Shop Now</button>
-          
+
         </div>
         <div id="cone-img">
 
@@ -35,27 +35,128 @@
 
 
     <!-- CONTAINER PART TWO START -->
-    <div class="conaitner-two">
+    <div class="container-two">
         <div>
             <h3>Our Featured Flowers</h3>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
         </div>
         <div class="cart-image">
             <div class="cart-one">
                 <img src="Flower Asset\pngwing 6.png" alt="">
+                <div>
+                    <p>Pink Flower Tree</p>
+                </div>
             </div>
             <div class="cart-two">
-                <img src="Flower Asset\pngwing 6.png" alt="">
+                <img src="Flower Asset/pngwing 5.png" alt="">
+                <div>
+                    <p>Pink Flower Tree</p>
+                </div>
             </div>
             <div class="cart-three">
-                <img src="Flower Asset\pngwing 6.png" alt="">
+                <img src="Flower Asset/pngwing 7.png" alt="">
+                <div>
+                    <p>Pink Flower Tree</p>
+                </div>
             </div>
         </div>
+        <!-- <div class="paragraph">
+            <p>Pink Flower Tree</p>
+            <p>Pink Flower Tree</p>
+            <p>Pink Flower Tree</p>
+        </div> -->
     </div>
     <!-- CONTAINER PART TWO END -->
 
+    <!-- CONTAINER PART THREE START -->
+    <div class="container-three">
+        <div>
+            <img src="Flower Asset/Group 57.png" alt="">
+            <p>Same Day Delivery. Click & Collect.</p>
+        </div>
+        <div>
+            <img src="Flower Asset/Group 58.png" alt="">
+            <p>Fresh Flowers. Local Growers.</p>
+        </div>
+        <div>
+            <img src="Flower Asset/Group 59.png" alt="">
+            <p>24/7 Free Support.</p>
+        </div>
 
-   
+    </div>
+
+
+    <!-- CONTAINER PART THREE END -->
+
+    <!-- CONTAINER PART FOUR START  -->
+
+    <div class="container-four">
+        <div class="section-one">
+            <h1>Hot Deal ! Sale Up To 25% Off</h1>
+            <h6>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</h6>
+            <button class="btn">Sign Up</button>
+        </div>
+        <div class="section-two">
+            <img src="Flower Asset/pngwing 8.png" alt="">
+        </div>
+
+    </div>
+
+
+    <!-- CONTAINER PART FOUR END -->
+
+    <!-- CONTAINER PART FIVE START -->
+    <div class="container-five">
+        <div>
+            <h1>Instagram</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+        </div>
+        <div>
+            <img src="Flower Asset/Flower 01.png" alt="">
+            <img src="Flower Asset/Rectangle 4.png" alt="">
+            <img src="Flower Asset/Rectangle 5.png" alt="">
+            <img src="Flower Asset/Rectangle 6.png" alt="">
+        </div>
+
+    </div>
+    <!-- CONTAINER PART FIVE END -->
+
+    <!-- CONTAINER PART SIX START -->
+    <div class="container-six">
+        <div>
+            <h1>Get The Latest Deals</h1>
+            <h6>$30 coupon for first shopping</h6>
+        </div>
+        <div>
+            <input placeholder="Enter your email here...." type="text" name="" id="">
+            <button class="btn">Subscribe</button>
+            <!-- <p style="background-image: url('Flower Asset/Rectangle 9.png');"></p> -->
+            
+        </div>
+
+    </div>
+    <!-- CONTAINER PART SIX END -->
+
+    <!-- CONTAINER PART SEVEN START -->
+
+    <div class="container-seven">
+        <div class="text-clr">
+            <h1><span class="fnt-clr">Flower</span>Shop</h1>
+            <h4>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
+            <h6>@2020-2023, FlowerShop.com. All rights reserved. </h6>
+        </div>
+
+    </div>
+
+
+    <!-- CONTAINER PART SEVEN END -->
+
+
+
+
 </body>
 
 </html>
