--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="cone-img">
 
-            <img src="Flower Asset/pngwing 10.png" alt="">
+            <img src="Flower_Asset/pngwing 10.png" alt="">
 
         </div>
     </div>
@@ -43,44 +43,35 @@
         </div>
         <div class="cart-image">
             <div class="cart-one">
-                <img src="Flower Asset\pngwing 6.png" alt="">
-                <div>
-                    <p>Pink Flower Tree</p>
-                </div>
+                <img src="Flower_Asset\pngwing 6.png" alt="">
             </div>
             <div class="cart-two">
-                <img src="Flower Asset/pngwing 5.png" alt="">
-                <div>
-                    <p>Pink Flower Tree</p>
-                </div>
+                <img src="Flower_Asset/pngwing 5.png" alt="">
             </div>
             <div class="cart-three">
-                <img src="Flower Asset/pngwing 7.png" alt="">
-                <div>
-                    <p>Pink Flower Tree</p>
-                </div>
+                <img src="Flower_Asset/pngwing 7.png" alt="">
             </div>
         </div>
-        <!-- <div class="paragraph">
+        <div class="flr-text">   
             <p>Pink Flower Tree</p>
             <p>Pink Flower Tree</p>
             <p>Pink Flower Tree</p>
-        </div> -->
+        </div>
     </div>
     <!-- CONTAINER PART TWO END -->
 
     <!-- CONTAINER PART THREE START -->
     <div class="container-three">
         <div>
-            <img src="Flower Asset/Group 57.png" alt="">
+            <img src="Flower_Asset/Group 57.png" alt="">
             <p>Same Day Delivery. Click & Collect.</p>
         </div>
         <div>
-            <img src="Flower Asset/Group 58.png" alt="">
+            <img src="Flower_Asset/Group 58.png" alt="">
             <p>Fresh Flowers. Local Growers.</p>
         </div>
         <div>
-            <img src="Flower Asset/Group 59.png" alt="">
+            <img src="Flower_Asset/Group 59.png" alt="">
             <p>24/7 Free Support.</p>
         </div>
 
@@ -99,7 +90,7 @@
             <button class="btn">Sign Up</button>
         </div>
         <div class="section-two">
-            <img src="Flower Asset/pngwing 8.png" alt="">
+            <img src="Flower_Asset/pngwing 8.png" alt="">
         </div>
 
     </div>
@@ -114,45 +105,51 @@
             <p>It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.</p>
         </div>
-        <div>
-            <img src="Flower Asset/Flower 01.png" alt="">
-            <img src="Flower Asset/Rectangle 4.png" alt="">
-            <img src="Flower Asset/Rectangle 5.png" alt="">
-            <img src="Flower Asset/Rectangle 6.png" alt="">
+        <div class="flowers-styls">
+            <img src="Flower_Asset/Flower 01.png" alt="">
+            <img src="Flower_Asset/Rectangle 4.png" alt="">
+            <img src="Flower_Asset/Rectangle 5.png" alt="">
+            <img src="Flower_Asset/Rectangle 6.png" alt="">
+        </div>
+        <!-- CONTAINER PART FIVE END -->
+
+        <!-- CONTAINER PART SIX START -->
+        <div class="container-six">
+            <div class="fnt-styl">
+                <h1>Get The Latest Deals</h1>
+                <h6>$30 coupon for first shopping</h6>
+                <input class="btn-styls" placeholder="Enter your email here...." type="text" name="" id="">
+                <button class="btn">Subscribe</button>
+            </div>
+
+        </div>
+        <!-- <div class="container-six">
+            <div>
+                <h1>Get The Latest Deals</h1>
+                <h6>$30 coupon for first shopping</h6>
+            </div>
+            <div>
+                <input placeholder="Enter your email here...." type="text" name="" id="">
+                <button class="btn">Subscribe</button>
+            </div>
+
+        </div> -->
+        <!-- CONTAINER PART SIX END -->
+
+        <!-- CONTAINER PART SEVEN START -->
+
+        <div class="container-seven">
+            <div class="text-clr">
+                <h1><span class="fnt-clr">Flower</span>Shop</h1>
+                <h4>It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout.</h4>
+                <h6>@2020-2023, FlowerShop.com. All rights reserved. </h6>
+            </div>
+
         </div>
 
-    </div>
-    <!-- CONTAINER PART FIVE END -->
 
-    <!-- CONTAINER PART SIX START -->
-    <div class="container-six">
-        <div>
-            <h1>Get The Latest Deals</h1>
-            <h6>$30 coupon for first shopping</h6>
-        </div>
-        <div>
-            <input placeholder="Enter your email here...." type="text" name="" id="">
-            <button class="btn">Subscribe</button>
-            <!-- <p style="background-image: url('Flower Asset/Rectangle 9.png');"></p> -->
-            
-        </div>
-
-    </div>
-    <!-- CONTAINER PART SIX END -->
-
-    <!-- CONTAINER PART SEVEN START -->
-
-    <div class="container-seven">
-        <div class="text-clr">
-            <h1><span class="fnt-clr">Flower</span>Shop</h1>
-            <h4>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</h4>
-            <h6>@2020-2023, FlowerShop.com. All rights reserved. </h6>
-        </div>
-
-    </div>
-
-
-    <!-- CONTAINER PART SEVEN END -->
+        <!-- CONTAINER PART SEVEN END -->
 
 
 
