finshed the CONTAINER ONE TO CONTAINER SEVEN END

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button class="btn">Shop Now</button>
 
         </div>
-        <div id="cone-img">
+        <div class="cone-img">
 
             <img src="Flower_Asset/pngwing 10.png" alt="">
 
@@ -123,20 +123,6 @@
             </div>
 
         </div>
-        <!-- <div class="container-six">
-            <div>
-                <h1>Get The Latest Deals</h1>
-                <h6>$30 coupon for first shopping</h6>
-            </div>
-            <div>
-                <input placeholder="Enter your email here...." type="text" name="" id="">
-                <button class="btn">Subscribe</button>
-            </div>
-
-        </div> -->
-        <!-- CONTAINER PART SIX END -->
-
-        <!-- CONTAINER PART SEVEN START -->
 
         <div class="container-seven">
             <div class="text-clr">
